fix spacing issue

--- a/client/src/modules/form.module.css
+++ b/client/src/modules/form.module.css
@@ -4,7 +4,11 @@
     display: flex;
     justify-content: left;
     flex-wrap: wrap;
-    margin: 5px auto;
+    margin: 1px auto;
+}
+
+.tags > * {
+    margin: 1px
 }
 
 .input {
